added lots of assets

--- a/style.css
+++ b/style.css
@@ -495,7 +495,7 @@ q:after
 	width:32px;
 	height:32px;
 	position:absolute;
-	background:url(img/cursor.png);
+	background:url(img/custom/dildo.png);
 }
 .cookieParticle
 {
